# skeleton-python-app

./: Dockerfile  Makefile  README.md  go.mod  pyproject.toml
