[tool.poetry]
name = "hello_world_app"
version = "0.1.0"
description = "A simple Hello World FastAPI app"
authors = ["Michael Price <michaelprice232@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
